[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "internxt-mcp"
version = "0.1.0"
description = "MCP server for Internxt Drive CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
internxt-mcp = "internxt_mcp_server:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["internxt_mcp_server.py"]
